--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "firebase": "^8.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.0",
     "react-router-dom": "^5.3.0",
